src/style.css
@font-face {
  font-family: 'Palatino Linotype';
  src: URL('/pala.ttf') format('truetype');
}

body {
	margin: 0;
	background-color: #000;
	color: #fff;
	font-family: 'Palatino Linotype';
	font-size: 24px;
}

html, body {
	overscroll-behavior: none;
	touch-action: none;
}

#page {
	position: fixed;
	inset: 0;
	background-color: rgba(0, 0, 0, 0.5);
	transition: opacity 0.5s ease;
	opacity: 0;
	display: flex;
	justify-content: center;
	align-items: center;
}

#page-panel {
	display: flex;
	flex-direction: column;
	height: 100%;
	width: min(100%, 90vh);
	transition: transform 0.5s ease; /* smooth animation */
	transform: translateY(50px);
	padding: 20px;
	box-sizing: border-box;
}

#page-content-parent {
	flex: 1 1 auto;
	overflow-y: auto;
	min-height: 0;
	background-color: rgba(0, 0, 0, 0.5);
	padding: 20px;
}

#page-top-bar {
	height: 50px;
	display: flex;
	align-items: center;
	background-color: rgba(99, 169, 173, 0.418);
	border-radius: 5px;
}

#page-title {
	position: absolute;
	left: 50%;
	transform: translateX(-50%);
}

#page-close {
	height: inherit;
	display: flex;
    align-items: center;
    justify-content: center;
	position: fixed;
	flex-shrink: 0;
	aspect-ratio: 1;
	left: 100%;
	transform: translate(-100%);
}

#page-content {
    display: flex; 
    flex-direction: column;
    align-items: center;   
}

#fade {
	background-color: rgb(0, 0, 0);
	transition: opacity 1s ease;
	position: absolute;
  	inset: 0;
	pointer-events: none;
}

